--- a/style/index.scss
+++ b/style/index.scss
@@ -59,13 +59,6 @@ body {
 //     z-index: 5000;
 // }
 
-.main_canvas  {
-    // width: min(50vw, 30vh);
-    // max-height: 50vh;
-    height: 40vw;
-    max-height: calc(90vh - 300px);
-}
-
 .compactness_tile_container {
     width: 100%;
     display:flex;
